// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-html > pass innerHTML prop to component 1`] = `
"import { createAssetComponent as _createAssetComponent } from 'vue';

export function render(_ctx) {
  const n0 = _createAssetComponent("Comp", { innerHTML: () => (_ctx.foo) }, null, true)
  return n0
}"
`;

exports[`v-html > pass innerHTML prop to dynamic component 1`] = `
"import { createDynamicComponent as _createDynamicComponent } from 'vue';

export function render(_ctx) {
  const n0 = _createDynamicComponent(() => (_ctx.Comp), { innerHTML: () => (_ctx.foo) }, null, 1 /* SINGLE_ROOT */)
  return n0
}"
`;

exports[`v-html > should convert v-html to innerHTML 1`] = `
"import { setHtml as _setHtml, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _renderEffect(() => _setHtml(n0, _ctx.code))
  return n0
}"
`;

exports[`v-html > should ignore interpolation children when v-html is present 1`] = `
"import { setHtml as _setHtml, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setHtml(n0, _ctx.test))
  return n0
}"
`;

exports[`v-html > should raise error and ignore children when v-html is present 1`] = `
"import { setHtml as _setHtml, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _renderEffect(() => _setHtml(n0, _ctx.test))
  return n0
}"
`;

exports[`v-html > should raise error if has no expression 1`] = `
"import { setHtml as _setHtml, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtml(n0, "")
  return n0
}"
`;
